--- a/proxypool/source.yaml
+++ b/proxypool/source.yaml
@@ -1,54 +1,54 @@
-# 模糊抓取订阅链接3wking
+# 模糊抓取订阅链接
 - type: webfuzzsub
   options:
     url:https://3wking.github.io/proxypool/proxypool.list
 
-# 模糊抓取订阅链接3wking
+# 模糊抓取订阅链接
 - type: webfuzzsub
   options:
     url:https://3wking.github.io/proxypool/sub.list
 
-# 模糊抓取订阅链接du5
+# 模糊抓取订阅链接
 - type: webfuzzsub
   options:
     url: https://raw.githubusercontent.com/du5/free/master/sub.list
 
-# 模糊抓取订阅链接huaxinCLUB
+# 模糊抓取订阅链接
 - type: webfuzzsub
   options:
     url: https://github.com/huaxinCLUB/NodeSpider/tree/master/WebSite
 
-# 模糊抓取订阅链接clashconfig
+# 模糊抓取订阅链接
 - type: webfuzzsub
   options:
     url: https://github.com/clashconfig/online
 
-# 模糊抓取订阅链接shoujiyanxishe
+# 模糊抓取订阅链接
 - type: webfuzzsub
   options:
     url: https://raw.githubusercontent.com/shoujiyanxishe/atu/main/etsub.list
 
-# 模糊抓取订阅链接shoujiyanxishe
+# 模糊抓取订阅链接
 - type: webfuzzsub
   options:
     url: https://raw.githubusercontent.com/shoujiyanxishe/atu/main/etproxytest
 
-# 模糊抓取订阅链接i.sqeven.me
+# 模糊抓取订阅链接
 - type: webfuzzsub
   options:
     url: http://i.sqeven.me/discuss/detail/104
 
-# 模糊抓取订阅链接i.sqeven.me
+# 模糊抓取订阅链接
 - type: webfuzzsub
   options:
     url: http://i.sqeven.me/discuss/detail/102
 
-# 模糊抓取订阅链接i.sqeven.me
+# 模糊抓取订阅链接
 - type: webfuzzsub
   options:
     url: http://i.sqeven.me/discuss/detail/100
 
-# 模糊抓取订阅链接raw.fastgit.org
+# 模糊抓取订阅链接
 - type: webfuzzsub
   options:
     url: https://raw.fastgit.org/freefq/free/master/v2
@@ -57,105 +57,149 @@
 
 #################################################################################
 
-# 订阅链接subscribe
+# 订阅链接
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/ssrsub/ssr/master/ss-sub
 
-# 订阅链接subscribe
+# 订阅链接
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/ssrsub/ssr/master/V2Ray
 
-# 订阅链接subscribe
+# 订阅链接
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/ssrsub/ssr/master/ssrsub
 
-# 订阅链接subscribe
+# 订阅链接
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/ssrsub/ssr/master/trojan
 
-# 订阅链接colatiger
+# 订阅链接
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/colatiger/v2ray-nodes/master/vmess.md
 
-# 订阅链接colatiger
+# 订阅链接
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/colatiger/v2ray-nodes/master/trojan.md
 
-# 订阅链接colatiger
+# 订阅链接
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/colatiger/v2ray-nodes/master/ss.md
 
-# 订阅链接colatiger
+# 订阅链接
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/colatiger/v2ray-nodes/master/proxy.md
 
-# 订阅链接adiwzx
+# 订阅链接
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/adiwzx/freenode/main/adispeed.txt
 
-# 订阅链接shoujiyanxishe
+# 订阅链接
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/shoujiyanxishe/atu/main/v2ray
 
-# 订阅链接iwxf.netlify.app
+# 订阅链接
 - type: subscribe
   options:
     url: https://iwxf.netlify.app
 
-# 订阅链接liushengweinielulu
+# 订阅链接
 - type: subscribe
   options:
     url: https://github.com/liushengweinielulu/V2RAY/raw/main/V2
 
-# 订阅链接webdao
+# 订阅链接
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/webdao/v2ray/master/nodes.txt
 
-# 订阅链接learnhard-cn
+# 订阅链接
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/free
 
-# 订阅链接learnhard-cn
+# 订阅链接
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/ss/sssub
 
-# 订阅链接learnhard-cn
+# 订阅链接
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/ssr/ssrsub
 
-# 订阅链接learnhard-cn
+# 订阅链接
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/v2ray/v2raysub
 
-# 订阅链接ermaozi
+# 订阅链接
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/ermaozi/get_subscribe/main/subscribe/v2ray.txt
 
-# 订阅链接yun.xiaoyao01.com
+# 订阅链接
 - type: subscribe
   options:
     url: https://yun.xiaoyao01.com/dingyue/fenxiang.txt
 
-# 订阅链接v2ray-links
+# 订阅链接
 - type: subscribe
   options:
     url: https://raw.githubusercontent.com/v2ray-links/v2ray-free/master/v2ray
+
+
+
+#################################################################################
+
+# 网页模糊抓取
+- type: webfuzz
+  options:
+    url: https://merlinblog.xyz/wiki/freess.html
+
+# 网页模糊抓取
+- type: webfuzz
+  options:
+    url: http://feeds.feedburner.com/mattkaydiary/pZjG
+
+# 网页模糊抓取
+- type: webfuzz
+  options:
+    url: https://github.com/huaxinCLUB/NodeSpider/tree/master/WebSite
+
+# 网页模糊抓取
+- type: webfuzz
+  options:
+    url: https://github.com/UmeLabs/node.umelabs.dev
+
+# 网页模糊抓取
+- type: webfuzz
+  options:
+    url: https://github.com/v2ray-links/v2ray-free
+
+# 网页模糊抓取
+- type: webfuzz
+  options:
+    url: https://github.com/freefq/free
+
+# 网页模糊抓取
+- type: webfuzz
+  options:
+    url: https://445600.ml/mohujiedian
+
+# 网页模糊抓取
+- type: webfuzz
+  options:
+    url: https://www.cfmem.com
 
 
 
@@ -371,62 +415,62 @@
   options:
     url: https://raw.githubusercontent.com/du5/free/master/file/0909/Clash.yaml
 
-# clash格式订阅链接1
+# clash格式订阅链接
 - type: clash
   options:
     url: https://raw.githubusercontent.com/ssrsub/ssr/master/Clash.yml
 
-# clash格式订阅链接2
+# clash格式订阅链接
 - type: clash
   options:
     url: https://raw.githubusercontent.com/adiwzx/freenode/main/adispeed.yml
 
-# clash格式订阅链接3
+# clash格式订阅链接
 - type: clash
   options:
     url:  https://raw.githubusercontent.com/huaxinCLUB/NodeSpider/master/newYaml/mattkaydiary.yaml
 
-# clash格式订阅链接4
+# clash格式订阅链接
 - type: clash
   options:
     url:  https://raw.githubusercontent.com/clashconfig/online/main/SurfShark(50168).yml
 
-# clash格式订阅链接5
+# clash格式订阅链接
 - type: clash
   options:
     url:  https://raw.githubusercontent.com/skywolf627/VmessActions/main/subscribe/clash.yml
 
-# clash格式订阅链接6
+# clash格式订阅链接
 - type: clash
   options:
     url:  https://raw.githubusercontent.com/zyzmzyz/free-nodes/master/Clash.yml
 
-# clash格式订阅链接7
+# clash格式订阅链接
 - type: clash
   options:
     url:  https://raw.githubusercontent.com/oslook/clash-freenode/main/clash.yaml
 
-# clash格式订阅链接8
+# clash格式订阅链接
 - type: clash
   options:
     url:  https://raw.githubusercontent.com/Happyflying666/clash/main/list
 
-# clash格式订阅链接9
+# clash格式订阅链接
 - type: clash
   options:
     url:  https://raw.githubusercontent.com/ermaozi/get_subscribe/main/subscribe/clash.yml
 
-# clash格式订阅链接10
+# clash格式订阅链接
 - type: clash
   options:
     url:  https://raw.githubusercontent.com/chfchf0306/clash/main/clash
 
-# clash格式订阅链接11
+# clash格式订阅链接
 - type: clash
   options:
     url:  https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/clash/config.yaml
 
-# clash格式订阅链接12
+# clash格式订阅链接
 - type: clash
   options:
     url:  https://raw.githubusercontent.com/ermaozi/get_subscribe/main/subscribe/clash.yml
@@ -435,152 +479,152 @@
 
 #################################################################################
 
-# 订阅链接fq.lonxin.net
+# 订阅链接
 - type: subscribe
   options:
     url: https://fq.lonxin.net/ss/sub
 
-# 订阅链接fq.lonxin.net
+# 订阅链接
 - type: subscribe
   options:
     url: https://fq.lonxin.net/sip002/sub
 
-# 订阅链接fq.lonxin.net
+# 订阅链接
 - type: subscribe
   options:
     url: https://fq.lonxin.net/ssr/sub
 
-# 订阅链接fq.lonxin.net
+# 订阅链接
 - type: subscribe
   options:
     url: https://fq.lonxin.net/vmess/sub
 
-# 订阅链接fq.lonxin.net
+# 订阅链接
 - type: subscribe
   options:
     url: https://fq.lonxin.net/trojan/sub
 
-# 订阅链接free.dswang.ga
+# 订阅链接
 - type: subscribe
   options:
     url: https://free.dswang.ga/ss/sub
 
-# 订阅链接free.dswang.ga
+# 订阅链接
 - type: subscribe
   options:
     url: https://free.dswang.ga/sip002/sub
 
-# 订阅链接free.dswang.ga
+# 订阅链接
 - type: subscribe
   options:
     url: https://free.dswang.ga/ssr/sub
 
-# 订阅链接free.dswang.ga
+# 订阅链接
 - type: subscribe
   options:
     url: https://free.dswang.ga/vmess/sub
 
-# 订阅链接free.dswang.ga
+# 订阅链接
 - type: subscribe
   options:
     url: https://free.dswang.ga/trojan/sub
 
-# 订阅链接free.kingfu.cf
+# 订阅链接
 - type: subscribe
   options:
     url: https://free.kingfu.cf/ss/sub
 
-# 订阅链接free.kingfu.cf
+# 订阅链接
 - type: subscribe
   options:
     url: https://free.kingfu.cf/sip002/sub
 
-# 订阅链接free.kingfu.cf
+# 订阅链接
 - type: subscribe
   options:
     url: https://free.kingfu.cf/ssr/sub
 
-# 订阅链接free.kingfu.cf
+# 订阅链接
 - type: subscribe
   options:
     url: https://free.kingfu.cf/vmess/sub
 
-# 订阅链接free.kingfu.cf
+# 订阅链接
 - type: subscribe
   options:
     url: https://free.kingfu.cf/trojan/sub
 
-# 订阅链接sspool.herokuapp.com
+# 订阅链接
 - type: subscribe
   options:
     url: https://sspool.herokuapp.com/ss/sub
 
-# 订阅链接sspool.herokuapp.com
+# 订阅链接
 - type: subscribe
   options:
     url: https://sspool.herokuapp.com/sip002/sub
 
-# 订阅链接sspool.herokuapp.com
+# 订阅链接
 - type: subscribe
   options:
     url: https://sspool.herokuapp.com/ssr/sub
 
-# 订阅链接sspool.herokuapp.com
+# 订阅链接
 - type: subscribe
   options:
     url: https://sspool.herokuapp.com/vmess/sub
 
-# 订阅链接sspool.herokuapp.com
+# 订阅链接
 - type: subscribe
   options:
     url: https://sspool.herokuapp.com/trojan/sub
 
-# 订阅链接www.linbaoz.com
+# 订阅链接
 - type: subscribe
   options:
     url: https://www.linbaoz.com/ss/sub
 
-# 订阅链接www.linbaoz.com
+# 订阅链接
 - type: subscribe
   options:
     url: https://www.linbaoz.com/sip002/sub
 
-# 订阅链接www.linbaoz.com
+# 订阅链接
 - type: subscribe
   options:
     url: https://www.linbaoz.com/ssr/sub
 
-# 订阅链接www.linbaoz.com
+# 订阅链接
 - type: subscribe
   options:
     url: https://www.linbaoz.com/vmess/sub
 
-# 订阅链接www.linbaoz.com
+# 订阅链接
 - type: subscribe
   options:
     url: https://www.linbaoz.com/trojan/sub
 
-# 订阅链接proxy.yugogo.xyz
+# 订阅链接
 - type: subscribe
   options:
     url: https://proxy.yugogo.xyz/ss/sub
 
-# 订阅链接proxy.yugogo.xyz
+# 订阅链接
 - type: subscribe
   options:
     url: https://proxy.yugogo.xyz/sip002/sub
 
-# 订阅链接proxy.yugogo.xyz
+# 订阅链接
 - type: subscribe
   options:
     url: https://proxy.yugogo.xyz/ssr/sub
 
-# 订阅链接proxy.yugogo.xyz
+# 订阅链接
 - type: subscribe
   options:
     url: https://proxy.yugogo.xyz/vmess/sub
 
-# 订阅链接proxy.yugogo.xyz
+# 订阅链接
 - type: subscribe
   options:
     url: https://proxy.yugogo.xyz/trojan/sub
@@ -589,7 +633,7 @@
 
 #################################################################################
 
-# 某个网站抓取/www.cfmem.com
+# 某个网站抓取
 - type: web-freessrxyz
   options:
     url: https://www.cfmem.com
