--- a/proxypool/source.yaml
+++ b/proxypool/source.yaml
@@ -179,236 +179,123 @@
 
 
 #################################################################################
+# TG频道抓取
 
-# tg频道抓取
 - type: tgchannel
   options:
     channel: ssrList
     num: 200
 
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: jingpingziyuanfenxiang
-    num: 200
-
-# tg频道抓取
 - type: tgchannel
   options:
     channel: ssrLists
     num: 200
 
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: ssrList2
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: freenodes
-    num: 200
-
-# tg频道抓取
 - type: tgchannel
   options:
     channel: ShareCentre
     num: 200
 
-# tg频道抓取
 - type: tgchannel
   options:
     channel: V2List
     num: 200
 
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: dangzhibu
-    num: 200
-
-# tg频道抓取
 - type: tgchannel
   options:
     channel: SSRCOM
     num: 200
 
-# tg频道抓取
 - type: tgchannel
   options:
     channel: SSRSUB
     num: 200
 
-# tg频道抓取
 - type: tgchannel
   options:
     channel: freebaipiao
     num: 200
 
-# tg频道抓取
 - type: tgchannel
   options:
     channel: mftizi
     num: 200
 
-# tg频道抓取
 - type: tgchannel
   options:
     channel: masco899
     num: 200
 
-# tg频道抓取
 - type: tgchannel
   options:
     channel: FreeSSRNode
     num: 200
 
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: fqswhj
-    num: 200
-
-# tg频道抓取
 - type: tgchannel
   options:
     channel: ssrtool
     num: 200
 
-# tg频道抓取
 - type: tgchannel
   options:
     channel: freeshadowsock
     num: 200
 
-# tg频道抓取
 - type: tgchannel
   options:
     channel: fanqiang666
     num: 200
 
-# tg频道抓取
 - type: tgchannel
   options:
     channel: ssrtool_crack
     num: 200
 
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: ssrshares
-    num: 200
-
-# tg频道抓取
 - type: tgchannel
   options:
     channel: gongyijichangfenxiang
     num: 200
 
-# tg频道抓取
 - type: tgchannel
   options:
-    channel: ssrv2taytgshare
+    channel: jiedianfenxiangqun
     num: 200
 
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: TgProxies
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: TG_Mtproxy_1
-    num: 200
-
-# tg频道抓取
 - type: tgchannel
   options:
     channel: baipiaojiedian
     num: 200
 
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: daolis_miao
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: vmesssr
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: sphard
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: pjzyj0
-    num: 200
-
-# tg频道抓取
 - type: tgchannel
   options:
     channel: jiedianfenxiang
     num: 200
 
-# tg频道抓取
 - type: tgchannel
   options:
     channel: flyingboat
     num: 200
 
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: NetfreexSrV
-    num: 200
-
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: gyjclub
-    num: 200
-
-# tg频道抓取
 - type: tgchannel
   options:
     channel: VPNFolder
     num: 200
 
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: youmtp
-    num: 200
-
-# tg频道抓取
 - type: tgchannel
   options:
     channel: ssrkn
     num: 200
 
-# tg频道抓取
 - type: tgchannel
   options:
     channel: abchz
     num: 200
 
-# tg频道抓取
 - type: tgchannel
   options:
     channel: yg251153
     num: 200
 
-# tg频道抓取
 - type: tgchannel
   options:
     channel: woyaofq
@@ -420,87 +307,108 @@
     channel: wwx_com
     num: 200
 
-# tg频道抓取
 - type: tgchannel
   options:
     channel: freessr4k
     num: 200
 
-# tg频道抓取
 - type: tgchannel
   options:
     channel: ultrafreevpn
     num: 200
 
-# tg频道抓取
 - type: tgchannel
   options:
     channel: VSshit
     num: 200
 
-# tg频道抓取
 - type: tgchannel
   options:
     channel: InternetSSR
     num: 200
 
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: baipiaodadui
-    num: 200
-
-# tg频道抓取
 - type: tgchannel
   options:
     channel: mtproxy666
     num: 200
 
-# tg频道抓取
 - type: tgchannel
   options:
     channel: v2ray666
     num: 200
 
-# tg频道抓取
 - type: tgchannel
   options:
     channel: freeVPNserv
   num: 200
 
-# tg频道抓取
-- type: tgchannel
-  options:
-    channel: ShadowsocksRssr
-    num: 200
 
-# tg频道抓取   
-- type: tgchannel
-  options:
-    channel: Goodsharefeng
-    num: 200
 
-# tg频道抓取
-- type: tgchannel
+#################################################################################
+# clash格式订阅链接
+
+- type: clash
   options:
-    channel: WangCai_2
-    num: 200
+    url: https://raw.githubusercontent.com/du5/free/master/file/0909/Clash.yaml
+
+- type: clash
+  options:
+    url: https://raw.githubusercontent.com/ssrsub/ssr/master/Clash.yml
+
+- type: clash
+  options:
+    url: https://raw.githubusercontent.com/adiwzx/freenode/main/adispeed.yml
+
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/huaxinCLUB/NodeSpider/master/newYaml/mattkaydiary.yaml
+
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/clashconfig/online/main/SurfShark(50168).yml
+
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/skywolf627/VmessActions/main/subscribe/clash.yml
+
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/zyzmzyz/free-nodes/master/Clash.yml
+
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/oslook/clash-freenode/main/clash.yaml
+
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/Happyflying666/clash/main/list
+
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/ermaozi/get_subscribe/main/subscribe/clash.yml
+
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/chfchf0306/clash/main/clash
+
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/learnhard-cn/free_proxy_ss/main/clash/config.yaml
+
+- type: clash
+  options:
+    url:  https://raw.githubusercontent.com/ermaozi/get_subscribe/main/subscribe/clash.yml
 
 
 
 #################################################################################
-
-# 翻墙党论坛抓取
-- type: web-fanqiangdang
-  options:
-    url: https://fanqiangdang.com/forum-48-1.html
 
 # clash格式订阅链接
 - type: clash
   options:
     url: https://raw.githubusercontent.com/du5/free/master/file/0909/Clash.yaml
 
-# clash格式订阅链接1
+
 - type: clash
   options:
     url: https://raw.githubusercontent.com/ssrsub/ssr/master/Clash.yml
